fix(style): unexpected line-break in article > li > p

--- a/theme/default/src/less/article.less
+++ b/theme/default/src/less/article.less
@@ -39,10 +39,7 @@ article {
   li, p {
     line-height: 36px;
   }
-  p {
-    overflow: auto;
-  }
-
+  
   p + h2,
   p + h3,
   p + h4,
